<resources>
    <string name="app_name" translatable="false">INS MOZ</string>
    <string name="email_address">Email do Utilizador</string>
    <string name="password">Senha do Utilizador</string>
    <string name="login_now">Entrar</string>
    <string name="don_t_remember_password">Esqueceu a sua senha?</string>
    <string name="desenvolvido">Desenvolvido Por UCM</string>
    <string name="txt_impressao">Forneça sua impressão digital</string>
    <string name="area_administrativa">Area Administrativa</string>
    <string name="icon_menu">icon menu</string>
    <string name="nome_usuario">Nome do Usuário</string>
    <string name="menu_navegacao">Menu de Navegação</string>
    <string name="sunday">Sun</string>
    <string name="celsius">20ºC</string>
    <string name="Monday" translatable="false">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="logo">logo</string>
    <string name="requisitar_mostras">Requisitar 2ª Via de Amostras</string>
    <string name="enviar_solicitacao">Procurar</string>
    <string name="nome_do_paciente">Nome do Paciente</string>
    <string name="paciente_celular">+258 848 396 068</string>
    <string name="contacto_string">Contacto:</string>
    <string name="notFound">Nenhum resultado\n encontrado</string>
    <string name="voltar">Voltar</string>
    <!-- FCM String values -->

    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">pedidos</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="action_settings">Settings</string>
    <string name="permitir_execucao_background">Permitir Execucao no Background</string>
    <string name="main_config_category_title">Configuracao Base</string>
    <string name="default_checkbox_preference">true</string>
    <string name="title_senaite_base_url_preference">URL do Servidor Senaite</string>
    <string name="summary_senaite_base_url_preference">Insira aqui o URL do Servidor</string>
    <string name="dialog_title_senaite_base_url_preference">Senaite Server URL</string>
    <string name="error_msg_unknown" />
    <string name="tap_to_reload">Recarregar</string>
    <string name="error_msg">Algo deu errado</string>
    <string name="error_msg_timeout">Excedeu o tempo</string>
    <string name="btn_retry">Tentar de novo</string>
    <string name="title_activity_result_details">ResultDetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>