<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/bg_login"
tools:context=".LoginPage">


<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_left"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="15dp"
    app:layout_constraintGuide_begin="24dp" />

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_right"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_end="24dp" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="147dp"
        android:layout_height="98dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logotipo"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/et_bg"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"

        android:onClick="login"
        android:background="@drawable/btn_bg"
        android:text="@string/login_now"
        android:textAllCaps="false"
        android:textColor="@color/splash_color"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/don_t_remember_password"
        android:textColor="@color/login_form_details"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/et_bg"
        android:drawableEnd="@drawable/ic_eye"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <View
    android:id="@+id/footer_line"
    android:layout_width="0dp"
    android:layout_height="1dp"
    android:layout_marginBottom="50dp"
    android:background="#fff"
    app:layout_constraintBottom_toBottomOf="parent" />

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="@font/roboto_bold"
    android:text="@string/desenvolvido"
    android:textColor="#fff"
    android:textSize="16sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/footer_line" />


    <ImageView
        android:id="@+id/fingerPrint"
        android:layout_width="70dp"
        android:layout_height="54dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_finger"
        app:layout_constraintBottom_toTopOf="@+id/footer_line"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="@+id/guideline_left" />

    <View
    android:id="@+id/line1"
    android:layout_width="120dp"
    android:layout_height="1dp"
    android:layout_marginTop="30dp"
    android:background="@color/login_form_details_medium"
    app:layout_constraintEnd_toStartOf="@+id/or"
    app:layout_constraintHorizontal_chainStyle="spread_inside"
    app:layout_constraintStart_toStartOf="@id/guideline_left"
    app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

<TextView
    android:id="@+id/or"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/or"
    android:textColor="@color/login_form_details"
    android:textSize="16sp"
    app:layout_constraintBottom_toBottomOf="@+id/line1"
    app:layout_constraintTop_toTopOf="@+id/line1"
    app:layout_constraintEnd_toStartOf="@+id/line2"
    app:layout_constraintStart_toEndOf="@+id/line1" />

<View
    android:id="@+id/line2"
    android:layout_width="120dp"
    android:layout_height="1dp"
    android:background="@color/login_form_details_medium"
    app:layout_constraintBottom_toBottomOf="@+id/or"
    app:layout_constraintEnd_toEndOf="@id/guideline_right"
    app:layout_constraintStart_toEndOf="@+id/or"
    app:layout_constraintTop_toTopOf="@+id/or" />

    <TextView
        android:id="@+id/textoFinger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/txt_impressao"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/fingerPrint"
        app:layout_constraintBottom_toTopOf="@id/footer_line"/>


</androidx.constraintlayout.widget.ConstraintLayout>