<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/colorWhite"
    tools:context=".AmostraSearchResult">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:id="@+id/amostra_backArrow_btn"
                android:layout_width="wrap_content"
                android:onClick="backSearchScreen"
                android:background="@color/purple"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_back_24"
                android:padding="5dp"
                android:contextClickable="true"
                android:tint="@color/colorWhite"
                android:transitionName="trans_back_arrow_btn"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple"
                android:orientation="vertical"
                android:paddingRight="16dp"
                android:paddingBottom="3dp"
                android:paddingLeft="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/profile"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="1dp"
                        android:src="@drawable/logotipo" />

                    <TextView
                        android:id="@+id/paciente_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="3dp"
                        android:layout_toEndOf="@+id/profile"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/nome_do_paciente"
                        android:textColor="#ffff"
                        android:textSize="18sp" />

                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/contacto_string"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/contacto_string"
                        android:textColor="@color/colorWhite"
                        android:fontFamily="@font/roboto_regular"
                        android:textSize="18sp"/>
                    <TextView
                        android:id="@+id/paciente_celular"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/paciente_celular"
                        android:textColor="@color/colorWhite"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_marginStart="15dp"
                        android:textSize="18sp"/>
                </LinearLayout>



            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:text="Resultados encontrados"
                android:textColor="@color/purple"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:background="@color/purple" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/amostra_resutl_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>




    </LinearLayout>
</ScrollView>